@@ -1,3 +1,6 @@
+2005-11-25 : wxSpellChecker should now compile with Unicode support
+             Replaced usage of wxMessageBox and wxPrintf with wxMessageOutput for better command-line support
+             
 2005-10-15 : Applied patches contributed by Julian SmarApplied patches contributed by Julian Smart
              Based on user feedback, removed option saving/loading from the spell check libraries.  This is best left in the application code
              Sample spell check engine option saving/loading code added to the demo application
